<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Bandeja</string>
    <string name="title_activity_main">Bandeja</string>
    <string name="package_name">com.funified.bandeja</string>
    <string name="custom_url_scheme">com.funified.bandeja</string>
    <string name="notification_channel_messages">Messages</string>
    <string name="notification_channel_messages_desc">Chat message notifications</string>
    <string name="push_reply_hint">Reply</string>
    <string name="push_reply_failed">Couldn\'t send</string>
    <string name="push_reply_self">You</string>
    <string name="invite_accept">Accept</string>
    <string name="invite_decline">Decline</string>
    <string name="play_intent_play_too">I want to play too</string>
    <string name="attendance_confirm">I\'m coming</string>
    <string name="attendance_unsure">Not sure yet</string>
    <string name="api_base_url_default" translatable="false">https://bandeja.me/api</string>
    <string name="shortcut_find_games_short">Find games</string>
    <string name="shortcut_find_games_long">Browse available games</string>
    <string name="shortcut_my_games_short">My games</string>
    <string name="shortcut_my_games_long">Show your upcoming games</string>
    <string name="shortcut_create_game_short">Create game</string>
    <string name="shortcut_create_game_long">Start creating a new game</string>
    <string name="shortcut_next_game_short">Next game</string>
    <string name="shortcut_next_game_long">Open your next upcoming game</string>
    <string name="shortcut_find_tomorrow_short">Find tomorrow</string>
    <string name="shortcut_find_tomorrow_long">Browse games for tomorrow</string>
    <string name="shortcut_create_league_short">Create league</string>
    <string name="shortcut_create_league_long">Start creating a new league</string>
    <string name="shortcut_game_chat_short">Game chat</string>
    <string name="shortcut_game_chat_long">Open chat for your next game</string>
    <string name="shortcut_live_scoring_short">Live scoring</string>
    <string name="shortcut_live_scoring_long">Open live scoring for your next game</string>
    <string name="shortcut_chats_short">Chats</string>
    <string name="shortcut_chats_long">Open your chats inbox</string>
    <string name="shortcut_invites_short">Invites</string>
    <string name="shortcut_invites_long">Show your game invites</string>
</resources>
